Main.py support args - add signle subject, add mutiple subjects and moved the args functionality to the utils class in order to clean the main.py run

--- a/config.json
+++ b/config.json
@@ -7,10 +7,10 @@
     "consul_ip": "35.195.7.50"
     },
     "vm": {
-    "site_internal_ip": "a",
-    "site_extarnel_ip": "a",
+    "site_internal_ip": "192.168.122.41",
+    "site_extarnel_ip": "192.168.122.41",
     "hq_api_url": "hq-api.tls.ai",
     "hq_url": "hq.tls.ai",
-    "consul_ip": "a"
+    "consul_ip": "192.168.122.41"
     }
 }
