--- a/config.json
+++ b/config.json
@@ -1,16 +1,20 @@
 {
     "cloud": {
-        "site_internal_ip": "0.132.15.204",
+        "site_internal_ip": "10.132.0.37",
         "site_extarnel_ip": "35.195.7.50",
         "hq_api_url": "hq-api.tls.ai",
         "hq_url": "hq.tls.ai",
-        "consul_ip": "35.195.7.50"
+        "site_consul_ip": "35.195.7.50",
+        "mongo_replica_1":"",
+        "mongo_replica_2": "",
+        "mongo_replica_3": ""
     },
     "vm": {
         "site_internal_ip": "192.168.122.41",
         "site_extarnel_ip": "192.168.122.41",
         "hq_api_url": "hq-api.tls.ai",
         "hq_url": "hq.tls.ai",
-        "consul_ip": "192.168.122.41"
+        "site_consul_ip": "192.168.122.41",
+
     }
 }
