Fixed issue where get_config did use default config if set config wasn't executed before it meaning their was no config set and not config would come back from get config. This fixed was required in order to add the ability for the vm_management.py to get it's allocator ip dynamically from the config and not hard coded

--- a/config/config_example.json
+++ b/config/config_example.json
@@ -9,16 +9,18 @@
         "mongo_replica_2": "",
         "mongo_replica_3": ""
     }],
-    "vm": {
+    "vm": [{
         "site_internal_ip": "192.168.122.41",
         "site_extarnel_ip": "192.168.122.41",
         "hq_api_url": "hq-api.tls.ai",
         "hq_url": "hq.tls.ai",
         "site_consul_ip": "192.168.122.41"
-    },
+    }],
     "ssh": {
         "username": "",
         "pem_path": ""
     },
-    "allocator_ip": ""
+    "allocator": {
+        "ip": ""
+    }
 }
