Get password for ssh from config

--- a/config/config_example.json
+++ b/config/config_example.json
@@ -18,7 +18,8 @@
     }],
     "ssh": {
         "username": "",
-        "pem_path": ""
+        "pem_path": "",
+        "password": ""
     },
     "allocator": {
         "ip": ""
