--- a/config/config_example.json
+++ b/config/config_example.json
@@ -5,16 +5,17 @@
         "hq_api_url": "",
         "hq_url": "",
         "site_consul_ip": "",
-        "mongo_replica_1":"",
-        "mongo_replica_2": "",
-        "mongo_replica_3": ""
+        "mongo_pass": "",
+        "mongo_ip": ""
     }],
     "vm": [{
         "site_internal_ip": "192.168.122.41",
         "site_extarnel_ip": "192.168.122.41",
         "hq_api_url": "hq-api.tls.ai",
         "hq_url": "hq.tls.ai",
-        "site_consul_ip": "192.168.122.41"
+        "site_consul_ip": "192.168.122.41",
+        "mongo_pass": "",
+        "mongo_ip": ""
     }],
     "ssh": {
         "username": "",
