--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+googleapiclient
 unix
 kvm
 pymongo==2.8
@@ -59,4 +60,210 @@ virtualenv==16.7.8
 virtualenv-clone==0.5.3
 wcwidth==0.1.7
 xmltodict==0.11.0
+zipp==0.6.0
+ansible==2.5.1
+apache-libcloud==2.2.1
+apipkg==1.5
+asn1crypto==0.24.0
+atomicwrites==1.3.0
+attrs==19.3.0
+backcall==0.1.0
+bcrypt==3.1.7
+beautifulsoup4==4.8.1
+boto3==1.10.6
+botocore==1.13.6
+cachetools==4.0.0
+certifi==2019.11.28
+cffi==1.13.1
+chardet==3.0.4
+code-snippet==1.1.0
+configobj==5.0.6
+configparser==4.0.2
+confluent-kafka==1.2.0
+contextlib2==0.6.0.post1
+coverage==4.5.4
+crcmod==1.7
+cryptography==2.1.4
+decorator==4.1.2
+docutils==0.15.2
+enum34==1.1.6
+execnet==1.7.1
+funcsigs==1.0.2
+google==2.0.2
+google-api-python-client==1.7.11
+google-auth==1.10.0
+google-auth-httplib2==0.0.3
+grpcio==1.24.3
+httplib2==0.9.2
+idna==2.6
+importlib-metadata==1.3.0
+ipaddr==2.2.0
+ipaddress==1.0.17
+ipython==7.9.0
+ipython-genutils==0.2.0
+jedi==0.15.1
+Jinja2==2.10
+jmespath==0.9.3
+keyring==10.6.0
+keyrings.alt==3.0
+kvm==1.1.1
+lockfile==0.12.2
+lxml==4.4.2
+MarkupSafe==1.0
+more-itertools==5.0.0
+munch==2.5.0
+netaddr==0.7.19
+packaging==19.2
+paramiko==2.0.0
+parso==0.5.1
+pathlib2==2.3.5
+pexpect==4.7.0
+pickleshare==0.7.5
+Pillow==6.2.1
+pipenv==2018.11.26
+pluggy==0.13.1
+powerline-status==2.6
+prompt-toolkit==2.0.10
+protobuf==3.10.0
+psutil==5.4.2
+ptyprocess==0.6.0
+py==1.8.0
+pyasn1==0.4.2
+pyasn1-modules==0.2.8
+pycparser==2.19
+pycrypto==2.6.1
+Pygments==2.4.2
+pymongo==2.8
+PyMySQL==0.9.3
+PyNaCl==1.3.0
+pyparsing==2.4.2
+pystache==0.5.4
+pytest==5.2.2
+pytest-cov==2.8.1
+pytest-forked==1.1.3
+pytest-html==2.0.1
+pytest-metadata==1.8.0
+pytest-xdist==1.30.0
+python-consul==1.1.0
+python-dateutil==2.8.0
+pyxdg==0.25
+PyYAML==3.12
+requests==2.18.4
+rsa==4.0
+s3transfer==0.2.1
+SecretStorage==2.3.1
+simplejson==3.13.2
+six==1.13.0
+soupsieve==1.9.5
+sshtunnel==0.1.5
+toml==0.10.0
+traitlets==4.3.3
+unix==1.0
+uritemplate==3.0.1
+urllib3==1.22
+virtualenv==16.7.8
+virtualenv-clone==0.5.3
+wcwidth==0.1.7
+zipp==0.6.0
+ansible==2.5.1
+apache-libcloud==2.2.1
+apipkg==1.5
+asn1crypto==0.24.0
+atomicwrites==1.3.0
+attrs==19.3.0
+backcall==0.1.0
+bcrypt==3.1.7
+beautifulsoup4==4.8.1
+boto3==1.10.6
+botocore==1.13.6
+cachetools==4.0.0
+certifi==2019.9.11
+cffi==1.13.1
+chardet==3.0.4
+code-snippet==1.1.0
+configobj==5.0.6
+configparser==4.0.2
+confluent-kafka==1.2.0
+contextlib2==0.6.0.post1
+coverage==4.5.4
+crcmod==1.7
+cryptography==2.8
+decorator==4.4.1
+docutils==0.15.2
+enum34==1.1.6
+execnet==1.7.1
+funcsigs==1.0.2
+google==2.0.2
+google-api-python-client==1.7.11
+google-auth==1.10.0
+google-auth-httplib2==0.0.3
+grpcio==1.24.3
+httplib2==0.9.2
+idna==2.8
+importlib-metadata==0.23
+ipaddr==2.2.0
+ipaddress==1.0.17
+ipython==7.9.0
+ipython-genutils==0.2.0
+jedi==0.15.1
+Jinja2==2.10
+jmespath==0.9.4
+keyring==10.6.0
+keyrings.alt==3.0
+kvm==1.1.1
+lockfile==0.12.2
+lxml==4.4.2
+MarkupSafe==1.0
+more-itertools==7.2.0
+munch==2.5.0
+netaddr==0.7.19
+packaging==19.2
+paramiko==2.6.0
+parso==0.5.1
+pathlib2==2.3.5
+pexpect==4.7.0
+pickleshare==0.7.5
+Pillow==6.2.1
+pipenv==2018.11.26
+pluggy==0.13.0
+powerline-status==2.6
+prompt-toolkit==2.0.10
+protobuf==3.10.0
+psutil==5.4.2
+ptyprocess==0.6.0
+py==1.8.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.19
+pycrypto==2.6.1
+Pygments==2.4.2
+pymongo==2.8
+PyMySQL==0.9.3
+PyNaCl==1.3.0
+pyparsing==2.4.2
+pystache==0.5.4
+pytest==5.2.2
+pytest-cov==2.8.1
+pytest-forked==1.1.3
+pytest-html==2.0.1
+pytest-metadata==1.8.0
+pytest-xdist==1.30.0
+python-consul==1.1.0
+python-dateutil==2.8.0
+PyYAML==5.2
+requests==2.22.0
+rsa==4.0
+s3transfer==0.2.1
+SecretStorage==2.3.1
+six==1.12.0
+soupsieve==1.9.5
+sshtunnel==0.1.5
+toml==0.10.0
+traitlets==4.3.3
+unix==1.0
+uritemplate==3.0.1
+urllib3==1.25.6
+virtualenv==16.7.8
+virtualenv-clone==0.5.3
+wcwidth==0.1.7
 zipp==0.6.0
