- Changed the mongodb.py to connect to the mongo of the HQ based on the /etc/hosts and mongo config object from the config/<user config>  - Added logging to mongo list sites query and sync status query

--- a/config/config_example.json
+++ b/config/config_example.json
@@ -23,7 +23,8 @@
     },
     "mongo": {
         "hq_pass": "",
-        "hq_ip": "",
+        "hq_user": "",
+        "mongo_service_url": "mongodb.replicaset-0.mongodb-replicaset,mongodb.replicaset-1.mongodb-replicaset,mongodb.replicaset-2.mongodb-replicaset",
         "site_pass": "",
         "site_ip": ""
     }
