--- a/config/config_example.json
+++ b/config/config_example.json
@@ -2,9 +2,15 @@
     "cloud": [{
         "site_internal_ip": "",
         "site_extarnel_ip": "",
+        "hq_ip": "",
         "hq_api_url": "",
         "hq_url": "",
-        "site_consul_ip": ""
+        "site_consul_ip": "",
+        "mongo_ip": "",
+        "mongo_pass": "",
+        "mongo_replica_1":"",
+        "mongo_replica_2": "",
+        "mongo_replica_3": ""
     }],
     "vm": [{
         "site_internal_ip": "192.168.122.41",
