--- a/config/config_example.json
+++ b/config/config_example.json
@@ -10,20 +10,25 @@
         "mongo_pass": "",
         "mongo_replica_1":"",
         "mongo_replica_2": "",
-        "mongo_replica_3": ""
+        "mongo_replica_3": "",
+        "ssh": {
+            "username": "",
+            "pem_path": "",
+            "password": ""
+    }
     }],
     "vm": [{
         "site_internal_ip": "192.168.122.41",
         "site_extarnel_ip": "192.168.122.41",
         "hq_api_url": "hq-api.tls.ai",
         "hq_url": "hq.tls.ai",
-        "site_consul_ip": "192.168.122.41"
-    }],
-    "ssh": {
-        "username": "",
-        "pem_path": "",
-        "password": ""
-    },
+        "site_consul_ip": "192.168.122.41",
+        "ssh": {
+            "username": "",
+            "pem_path": "",
+            "password": ""
+    }
+    }], ,
     "allocator": {
         "ip": ""
     },
