--- a/config/config_example.json
+++ b/config/config_example.json
@@ -36,6 +36,9 @@
         "hq_pass": "",
         "hq_user": "root",
         "mongo_service_url": "mongodb.replicaset-0.mongodb-replicaset,mongodb.replicaset-1.mongodb-replicaset,mongodb.replicaset-2.mongodb-replicaset",
+        "mongo_zero_ip": "34.83.206.190",
+        "mongo_one_ip": "104.198.104.178",
+        "mongo_two_ip": "#35.199.172.249",
         "site_pass": "",
         "site_ip": ""
     }
